Biological_app/server/kubernetes/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-sv
  namespace: bioapp
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
