Biological_app/server/kubernetes/backend/backend-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: bioapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
     - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-sv
                port:
                  number: 8080
